# cobalt-kiosk-form-template

./: .gitignore  Changelog.md  LICENSE  README.md  cabal.config  circle.yml  cobalt-form.xml  cobalt-kiosk-form-template.cabal  cobalt-kiosk-form.cabal  main.c  makefile  stack.yaml
cbits/: foo.c
include/: foo.h
meta/: Main.hs
src/Kiosk/Backend/: Form.hs
src/Kiosk/Backend/Form/: Attribute.hs  Converter.hs  Element.hs  Generator.hs  Internal.hs  Parsers.hs  Rendering.hs
src/Kiosk/Backend/Form/Attribute/: Action.hs  Indexable.hs  Max.hs  Min.hs  Path.hs  Required.hs  Width.hs  Width.hs~
src/Kiosk/Backend/Form/Element/: Address.hs  Company.hs  Constant.hs  Form.hs  Item.hs  Logo.hs  Phone.hs  Row.hs
src/Kiosk/Backend/Form/Element/Item/: AutoInput.hs  Button.hs  Button.hs~  Checkbox.hs  Dropdown.hs  EmptyBlock.hs  EmptyBlock.hs~  Input.hs  Label.hs  Option.hs  Radio.hs  TableLeftHeader.hs  TableLeftHeader.hs~  TableTopHeader.hs  TableTopHeader.hs~
src/Kiosk/Backend/Form/Generator/: Cobalt.hs  CobaltFull.hs  RockShore.hs  RockShoreFull.hs
src/Kiosk/Backend/Form/Rendering/: CStruct.hsc  HsBar.hsc  XML.hs
src/Kiosk/Backend/Form/Rendering/Metaprogramming/: CStruct.hs
test/: Test.hs  TestImport.hs
test/Kiosk/Backend/: FormSpec.hs
test/Kiosk/Backend/Form/: ParserSpec.hs
