name:                cobalt-kiosk-form-template
version:             1.4.0
synopsis:            Form Types for Cobal Kiosk Application Backend
description:         Form Types for Cobal Kiosk Application Backend
license:             MIT
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          james.haver@plowtech.net
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Kiosk.Backend.Form
                        Kiosk.Backend.Form.Attribute
                        Kiosk.Backend.Form.Converter
                        Kiosk.Backend.Form.Element
                        Kiosk.Backend.Form.Generator.Cobalt
                        Kiosk.Backend.Form.Generator.RockShore
                        Kiosk.Backend.Form.Parsers



  other-modules:        Kiosk.Backend.Form.Attribute.Width
                        Kiosk.Backend.Form.Attribute.Max
                        Kiosk.Backend.Form.Attribute.Min
                        Kiosk.Backend.Form.Attribute.Indexable
                        Kiosk.Backend.Form.Attribute.Action
                        Kiosk.Backend.Form.Attribute.Path

                        Kiosk.Backend.Form.Element.Address
                        Kiosk.Backend.Form.Element.Company
                        Kiosk.Backend.Form.Element.Constant 
                        Kiosk.Backend.Form.Element.Form 
                        Kiosk.Backend.Form.Element.Logo
                        Kiosk.Backend.Form.Element.Phone

                        Kiosk.Backend.Form.Element.Item  
                        Kiosk.Backend.Form.Element.Item.Button
                        Kiosk.Backend.Form.Element.Item.EmptyBlock
                        Kiosk.Backend.Form.Element.Item.Input
                        Kiosk.Backend.Form.Element.Item.AutoInput
                        Kiosk.Backend.Form.Element.Item.Label
                        Kiosk.Backend.Form.Element.Item.Radio
                        Kiosk.Backend.Form.Element.Item.TableLeftHeader
                        Kiosk.Backend.Form.Element.Item.TableTopHeader
                        Kiosk.Backend.Form.Element.Row

                        Kiosk.Backend.Form.Rendering.XML




  other-extensions:     ForeignFunctionInterface 
                      , OverloadedStrings
                      
  
  build-depends:        base       >= 4.7  && <4.8
                      , attoparsec >= 0.12 && <0.13 
                      , text       >= 1.2  && < 1.3
                      , bytestring >= 0.10 && < 0.11
                      , action-permutations >= 0.0.0.1
                      , blaze-html >= 0.7.0.3 && < 0.9
  
  hs-source-dirs:     src
  
  ghc-options:        -Wall
  
  default-language:   Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      src
                     , test
  
  ghc-options:         -Wall
  
  main-is:             Test.hs

  build-depends:       base >=4.7 && <4.8
                     , hspec >= 2.1.7 && < 2.2
                     , QuickCheck >= 2.8.1 && < 2.9
                     , attoparsec >=0.12 && <0.13 
                     , text >=1.2 && <1.3
                     , lens >= 4.9
                     , bytestring 
                     , blaze-html
                     , action-permutations >= 0.0.0.1  
