name:                cobalt-kiosk-form-template
version:             1.6.4.0
synopsis:            Form Types for Cobal Kiosk Application Backend
description:         Form Types for Cobal Kiosk Application Backend
license:             MIT
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          james.haver@plowtech.net
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:     README.md
                      , Changelog.md
                      , main.c

Flag preprocess
    Description:        Build to create automatically create C header
                        and related Haskell files. Use Template Haskell
                        only for file generation. Library version should
                        not use Template Haskell.
    Default:            False

library
  exposed-modules:      Kiosk.Backend.Form
                        Kiosk.Backend.Form.Attribute
                        Kiosk.Backend.Form.Converter
                        Kiosk.Backend.Form.Element
                        Kiosk.Backend.Form.Generator.Cobalt
                        Kiosk.Backend.Form.Generator.RockShore
                        Kiosk.Backend.Form.Parsers

  other-modules:        Kiosk.Backend.Form.Attribute.Width
                        Kiosk.Backend.Form.Attribute.Max
                        Kiosk.Backend.Form.Attribute.Min
                        Kiosk.Backend.Form.Attribute.Indexable
                        Kiosk.Backend.Form.Attribute.Action
                        Kiosk.Backend.Form.Attribute.Path
                        Kiosk.Backend.Form.Attribute.Required

                        Kiosk.Backend.Form.Element.Address
                        Kiosk.Backend.Form.Element.Company
                        Kiosk.Backend.Form.Element.Constant
                        Kiosk.Backend.Form.Element.Form
                        Kiosk.Backend.Form.Element.Logo
                        Kiosk.Backend.Form.Element.Phone

                        Kiosk.Backend.Form.Element.Item
                        Kiosk.Backend.Form.Element.Item.Button
                        Kiosk.Backend.Form.Element.Item.EmptyBlock
                        Kiosk.Backend.Form.Element.Item.Input
                        Kiosk.Backend.Form.Element.Item.AutoInput
                        Kiosk.Backend.Form.Element.Item.Label
                        Kiosk.Backend.Form.Element.Item.Radio
                        Kiosk.Backend.Form.Element.Item.Dropdown
                        Kiosk.Backend.Form.Element.Item.Checkbox
                        Kiosk.Backend.Form.Element.Item.Option
                        Kiosk.Backend.Form.Element.Item.TableLeftHeader
                        Kiosk.Backend.Form.Element.Item.TableTopHeader
                        Kiosk.Backend.Form.Element.Row

                        Kiosk.Backend.Form.Rendering.XML
                        Kiosk.Backend.Form.Rendering.CStruct

  other-extensions:     ForeignFunctionInterface
                      , OverloadedStrings


  build-depends:        base                >= 4.8     && < 5
                      , attoparsec
                      , aeson
                      , text
                      , bytestring
                      , action-permutations
                      , blaze-html

  if flag(preprocess) {
    other-modules:      Kiosk.Backend.Form.Rendering.Metaprogramming.CStruct
    build-depends:      template-haskell
  }

  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010

  build-tools:          hsc2hs
  c-sources:            cbits/foo.c
  include-dirs:         include
  includes:             foo.h
  install-includes:     foo.h


executable onping
  if flag(preprocess)
      Buildable: True

  main-is:           Main.hs
  hs-source-dirs:    src
                   , meta
  build-depends:     base       >= 4.8     && < 5
                   , attoparsec
                   , text
                   , bytestring
                   , action-permutations
                   , blaze-html
                   , template-haskell
                   , cobalt-kiosk-form-template
                   , aeson

  default-language:     Haskell2010
  ghc-options:       -threaded -O2 -rtsopts -Wall

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Test.hs
  build-depends:       base       >= 4.8   && < 5
                     , hspec
                     , QuickCheck
                     , attoparsec
                     , text
                     , lens
                     , bytestring
                     , blaze-html
                     , aeson
                     , action-permutations
                     , cobalt-kiosk-form-template
