Name:                   cobalt-kiosk-form
Version:                1.0.0
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Form Types for Cobalt Kiosk Application Backend
Description:            Form Types for Cobalt Kiosk Application Backend
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Kiosk.Backend.Form
  Other-Modules:        Kiosk.Backend.Form.Internal
  Build-Depends:        base >= 4 && < 5

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/cobalt-kiosk-form.git
